--- a/week1/style.css
+++ b/week1/style.css
@@ -65,12 +65,26 @@ aside h3 {
 
 .burger__card {
   display: flex;
-  gap: 15px;
-  background-color: white;
-  border: 1px solid black;
+  gap: 20px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  background-color: #fff;
   border-radius: 8px;
   width: 45%;
   padding: 40px 20px;
+  cursor: pointer;
+}
+
+.burger__card:hover {
+  background-color: #e3ffce;
+}
+
+.burger__card:hover > img {
+  transform: scale(1.1);
+}
+
+.burger__card:hover .burger__name {
+  color: #60ae2b;
+  border-bottom: 3px double #000;
 }
 
 .burger__card > img {
@@ -85,10 +99,12 @@ aside h3 {
 .burger__name {
   font-weight: 600;
   font-size: 22px;
+  padding-bottom: 5px;
 }
 
 .burger__description {
   line-height: 1.5;
+  word-break: keep-all;
 }
 
 .cart {
