feat: 장바구니에 태그 동적으로 삽입하고 삭제하기

--- a/week1/style.css
+++ b/week1/style.css
@@ -147,10 +147,19 @@ aside h3 {
   min-width: 235px;
 }
 
-.cart__items,
+.cart__list,
 .cart__sum {
   padding-bottom: 30px;
   border-bottom: 2px dashed #000;
+}
+
+.cart__item {
+  list-style: none;
+}
+
+.item__delete-btn {
+  font-weight: 600;
+  background-color: transparent;
 }
 
 .cart__btn-group {
